[tool.pytest.ini_options]
addopts = "--spec" # --html=tests.html --self-contained-html"
env = [
  "D:SPOOQ_ENV = test"
]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.github
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | \.pytest_cache
  | \.history
  | __pycache__
  | temp
  | _build
  | buck-out
  | build
  | dist
  | docs
  | .*\.json$
)/
'''

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
